--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "env": "0.0.2",
+    "evn": "0.0.1",
     "firebase": "^9.6.6",
     "js-cookie": "^3.0.1",
     "notistack": "^2.0.3",
